--- a/templates/index.html
+++ b/templates/index.html
@@ -261,7 +261,7 @@ th, td {
     
     <h1>כמה יישובים בארץ אתה מכיר?</h1>
 
-    <input type="text" id="city-input" placeholder="כתוב יישוב..." autocomplete="off">
+    <input type="text" id="city-input" placeholder="כתוב יישוב..." autocomplete="off" autofocus="off">
     <button onclick="submitCity()">שלח</button>
     <button id="give-up-button">נכנעת?</button>
 
