--- a/templates/index.html
+++ b/templates/index.html
@@ -124,6 +124,9 @@ th, td {
     width: 90%;
     max-width: 400px;
 }
+#city-input {
+    touch-action: manipulation; /* Prevents unnecessary scrolling when interacting */
+}
 
 .modal-content button {
     margin: 10px 5px;
