--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@ body {
     padding: 20px;
     margin: 0;
     line-height: 1.6;
+    padding-top: 60px
 }
 
 h1 {
@@ -76,6 +77,17 @@ button:hover {
 .feedback {
     font-size: 1.2rem;
     margin: 1rem 0;
+}
+
+#city-input {
+position: fixed;
+top: 10px; 
+left: 50%;
+transform: translateX(-50%);
+width: 300px; 
+z-index: 1000; 
+background-color: white;
+box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .guessed-cities-table {
@@ -205,6 +217,11 @@ th, td {
         font-size: 16px;
         margin-top: 15px;
     }
+
+    #city-input {
+        width: 90%;
+        max-width: 300px;
+}
 
     #give-up-modal, #leaderboard-entry {
         padding: 15px;
